# mine-sensor-secure-comm

./: .gitignore  README.md  Run.bat  Run.sh  pyproject.toml  实验报告.md  实验报告_v2.md  报告.md  报告（王）.md
certs/: README.md
config/: mosquitto.conf  psk.json.example  sensors.toml  sensors.yml.example
doc/: deployment.md  performance_test_guide.md  reference.md  system_design.md  wireshark_capture_guide.md
scripts/: README.md  generate_certs.bat  generate_certs.sh  run_performance_tests.py  start_mosquitto.bat  start_mosquitto.sh  start_system.bat  start_system.py
src/mine_sensor_secure_comm/: __init__.py  alerts.py  benchmark.py  center.py  center_core.py  cert_cli.py  config_loader.py  crypto_utils.py  log_records.py  message.py  mqtt_runtime.py  replay_guard.py  security_tests.py  sensor_cli.py  sensor_node.py  sensor_sim.py
tests/: test_benchmark.py  test_benchmark_runtime.py  test_center.py  test_center_core.py  test_cert_cli.py  test_crypto_utils.py  test_log_records.py  test_performance_runner.py  test_replay_guard.py  test_security_tests.py  test_sensor_cli.py  test_sensor_node.py  test_start_system.py
web/: app.js  index.html  style.css
