[project]
name = "mine-sensor-secure-comm"
version = "0.1.0"
description = "MQTT over TLS secure communication prototype for mine sensor nodes."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "cryptography>=42.0.0",
    "paho-mqtt>=2.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
mine-center = "mine_sensor_secure_comm.center:main"
mine-sensor = "mine_sensor_secure_comm.sensor_node:main"
mine-sec-test = "mine_sensor_secure_comm.security_tests:main"
mine-bench = "mine_sensor_secure_comm.benchmark:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
